2011-12-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php
	include/functions_custom_graphs.php: Fixed combined graphs bug and
	improved presentation merged from trunk

2011-12-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/search_alerts.php: Added semicolon at end of a line.
	
	Merged bugfix from trunk.

2011-12-21  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/status_monitor.php: Merged from trunk. Fixed that
	long module names cannot be seen. (Added title.)

2011-12-19  Junichi Satoh  <junichi@rworks.jp>

	* include/languages/ja.po, include/languages/ja.mo: Updated translation
	files.

2011-12-16  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_ff_threshold.php: Fixed Japanese word
	translations.

2011-12-16  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager.php: Merged from trunk. Fixed wrong
	pagination links after updating modules.

2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/servers/manage_recontask_form.php: Deleted notice due to 
	a non init variable.

2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_forecast.php
	include/functions_reporting.php: Added CSV functionality for 
	projection and prediction reports.

2011-12-15 Tomas Palacios <tomas.palacios@artica.es>

	* include/languages: Updated template, .po and .mo files.
	Updated template in Launchpad and completed
	Spanish and English translations.

2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_reporting.php: Projection graphs are static now.

2011-12-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_forecast.php: Changed the kind of graph 
	for projection to static

2011-12-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php